<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/gunmetal"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/superagothic_extrabold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_the_input_below_here"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/silver_sand"
        android:fontFamily="@font/nimbussan_reg"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/nevyBlue"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/name"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:background="@drawable/edittextbackground"
        android:hint="@string/name"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:drawableTint="@color/nevyBlue"
        android:drawableStart="@drawable/user"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/nevyBlue"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittextbackground"
        android:hint="@string/username_gmail_com"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:drawableTint="@color/nevyBlue"
        android:drawableStart="@drawable/emailll"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/nevyBlue"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextbackground"
        android:hint="@string/_880_xxxxxxxx"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:drawableTint="@color/nevyBlue"
        android:drawableStart="@drawable/phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/nevyBlue"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextbackground"
        android:hint="@string/star"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:drawableTint="@color/nevyBlue"
        android:drawableEnd="@drawable/toggol"
        android:drawableStart="@drawable/passwordd"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/nevyBlue"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextbackground"
        android:hint="@string/star"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:drawableTint="@color/nevyBlue"
        android:drawableEnd="@drawable/toggol"
        android:drawableStart="@drawable/passwordd"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/nevyBlue"
        android:visibility="gone"/>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/white"
        android:background="@drawable/loginbutton"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or log in with"
        android:fontFamily="@font/nimbussan_reg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/google"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:src="@drawable/facebook"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:src="@drawable/twitter"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            android:fontFamily="@font/superagothic_extrabold"
            android:textColor="@color/gunmetal"
           />
        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/superagothic_extrabold"
            android:textColor="@color/nevyBlue"/>
    </LinearLayout>











</LinearLayout>