<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LogIn">
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical"
        android:layout_below="@+id/layout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/superagothic_extrabold"
            android:textColor="@color/gunmetal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in_to_continue"
            android:fontFamily="@font/nimbussan_reg"
            android:textColor="@color/silver_sand"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/superagothic_extrabold"
            android:textColor="@color/nevyBlue"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:textSize="15sp"/>


        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/edittextbackground"
            android:hint="@string/username_gmail_com"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:drawableTint="@color/nevyBlue"
            android:drawableStart="@drawable/emailll"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/superagothic_extrabold"
            android:textColor="@color/nevyBlue"
            android:layout_marginStart="90dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/edittextbackground"
            android:hint="@string/star"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:drawableTint="@color/nevyBlue"
            android:drawableStart="@drawable/passwordd"
            android:drawableEnd="@drawable/toggol"
            />
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/login_text"
            android:fontFamily="@font/superagothic_extrabold"
            android:textColor="@color/white"
            android:background="@drawable/loginbutton"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:gravity="center"/>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:layout_below="@id/layout2"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center_horizontal"
        android:fontFamily="@font/superagothic_extrabold"
        android:textSize="15sp"
        android:layout_marginTop="0dp"
        android:textColor="@color/nevyBlue"/>

</LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="100dp"
    android:layout_marginBottom="50dp"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/gunmetal"/>
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/superagothic_extrabold"
        android:textColor="@color/nevyBlue"/>
</LinearLayout>








</RelativeLayout>